# budget-forecast

./: .clang-format  .gitignore  CMakeLists.txt  aaa.glade  basic.glade  loadFile.cpp  loadFile.h  main.cpp
src/: main.cpp
src/data/: Test_DB.db
